UB-58: Comment post, like/dislike post (#22)
* previous endpoints for posts and UB-58

* fix some tests